@@ -1,0 +1,9 @@
+config BR2_PACKAGE_LUAFILESYSTEM
+	bool "luafilesystem"
+	depends on BR2_LARGEFILE
+	depends on BR2_PACKAGE_LUA_SHARED_LIBRARY
+	help
+	  LuaFileSystem offers a portable way to access
+	  the underlying directory structure and file attributes.
+
+	  http://luaforge.net/projects/luafilesystem/
